src/App.css
/* App.css */

body {
  overflow: hidden;
  height: 100vh;
  background-color: #f4f6f8;
  margin: 0;
  padding: 0;
  position: relative;
  font-family: Arial, sans-serif;
}

header {
  position: fixed;
  height: 50px;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #3b7181;
  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
  color: white;
  padding: 0.8rem 1.5rem;
  text-align: center;
  z-index: 10;
}

header h1 {
  margin: 0;
  font-size: 1.8rem;
  letter-spacing: 1px;
}

header p {
  margin: 0.2rem 0 0;
  font-size: 1rem;
  font-weight: 300;
}

/* .mapbutton a {
  color: white;
  text-decoration: none;
  font-weight: bold;
} */

#map {
  position: absolute;
  top: 75px; 
  left: 0;
  width: 100%;
  height: 100vh; 
  border-top: 2px solid #ccc;
}

#popup-dialog {
  position: fixed;
  top: 20%;
  left: 50%;
  transform: translateX(-50%);
  background: #ffffffcc;
  border: 1px solid #ccc;
  border-radius: 15px;
  padding: 1.5rem;
  z-index: 2000;
  max-width: 260px;
}
#popup-dialog h2 {
  margin-top: 0;
  font-size: 1.5rem;
  color: #f1593e;
}
#popup-dialog p strong {
  color: #0e0d0d;
}
#popup-dialog p  {
  margin: 0.4rem 0;
  font-size: 0.95rem;
  color: #0e0d0d;
}

#popup-dialog.hidden {
  display: none;
}

/* #popup-dialog button {
  position: absolute;
  top: 5px;
  right: 5px;
  border: none;
  background: none;
  font-size: 1.2rem;
  cursor: pointer;
} */

#close-dialog {
  position: absolute;
  top: 5px;
  right: 10px;
  background: transparent;
  border: none;
  font-size: 1.2rem;
  font-weight: bold;
  color: #070707;
  cursor: pointer;
}

footer {
  text-align: center;
  margin: 0;
  font-size: 0.9rem;
  color: #555;
  position: fixed;
  bottom: 0;
  width: 100%;
  background: #3b7181;
  color: white;
  text-align: center;
  padding: 0.5rem;
  z-index: 10;
}

